--- a/001.HTML/014.moksha/index.html
+++ b/001.HTML/014.moksha/index.html
@@ -120,26 +120,119 @@
                             <div class="right-box">
                                 <div class="vertical-title-box fade-content-letters">
                                     <div class="subtitle-box">
-                                        <h2 class="hanja">冥想</h2>
+                                        <h2 class="hanja">空間</h2>
                                         <div class="kr-box">
-                                            <h3 class="sub">세련된 소재와</h3>
-                                            <h3 class="sub">창의에 의한 음식 체험</h3>
+                                            <h3 class="sub">명상을 위해&nbsp;</h3>
+                                            <h3 class="sub">편안하게 꾸민 공간</h3>
                                         </div>
                                         <span class="border"></span>
                                         <div class="en-box">
-                                            <h3 class="en">Food experience that  </h3>
-                                            <h3 class="en second">carefully selected ingredients with creativity.</h3>
+                                            <h3 class="en">Room with Koreans sense of beauty</h3>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="button-box fade-content-letters">
                                     <a href="" class="link-button">
-                                        <p class="text">ROOMS</p>
+                                        <p class="text">SPACE</p>
                                     </a>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <div class="teaism fade-content-letters-pc">
+                        <div class="description-img-box2">
+                            <div class="left-box fade gray-scale">
+                                <a href="">
+                                    <picture>
+                                        <img src="images/top-img4@2x.jpeg" alt="" class="js-parallax picture">
+                                    </picture>
+                                </a>
+                            </div>
+                            <div class="right-box">
+                                <div class="button-box fade-content-letters">
+                                    <a href="" class="link-button">
+                                        <p class="text">ROOMS</p>
+                                    </a>
+                                </div>
+                                <div class="vertical-title-box fade-content-letters">
+                                    <div class="subtitle-box">
+                                        <h2 class="hanja">茶道</h2>
+                                        <div class="kr-box">
+                                            <h3 class="sub">명상을 위해&nbsp;</h3>
+                                            <h3 class="sub">편안하게 꾸민 공간</h3>
+                                        </div>
+                                        <span class="border"></span>
+                                        <div class="en-box">
+                                            <h3 class="en">Room with Koreans sense of beauty</h3>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tea fade-content-letters-pc">
+                        <div class="description-img-box1">
+                            <div class="left-box fade gray-scale">
+                                <a href="">
+                                    <picture>
+                                        <img src="images/top-img5.jpeg" alt="" class="js-parallax picture">
+                                    </picture>
+                                </a>
+                            </div>
+                            <div class="right-box">
+                                <div class="vertical-title-box fade-content-letters">
+                                    <div class="subtitle-box">
+                                        <h2 class="hanja">茶</h2>
+                                        <div class="kr-box">
+                                            <h3 class="sub">명상을 위해&nbsp;</h3>
+                                            <h3 class="sub">편안하게 꾸민 공간</h3>
+                                        </div>
+                                        <span class="border"></span>
+                                        <div class="en-box">
+                                            <h3 class="en">Room with Koreans sense of beauty</h3>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="button-box fade-content-letters">
+                                    <a href="" class="link-button">
+                                        <p class="text">TEA</p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="teaism fade-content-letters-pc">
+                        <div class="description-img-box2">
+                            <div class="left-box fade gray-scale">
+                                <a href="">
+                                    <picture>
+                                        <img src="images/top-img6@2x.jpeg" alt="" class="js-parallax picture">
+                                    </picture>
+                                </a>
+                            </div>
+                            <div class="right-box">
+                                <div class="button-box fade-content-letters">
+                                    <a href="" class="link-button">
+                                        <p class="text">COMMUNICATE</p>
+                                    </a>
+                                </div>
+                                <div class="vertical-title-box fade-content-letters">
+                                    <div class="subtitle-box">
+                                        <h2 class="hanja">疏通</h2>
+                                        <div class="kr-box">
+                                            <h3 class="sub">명상을 위해&nbsp;</h3>
+                                            <h3 class="sub">편안하게 꾸민 공간</h3>
+                                        </div>
+                                        <span class="border"></span>
+                                        <div class="en-box">
+                                            <h3 class="en">Room with Koreans sense of beauty</h3>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </section>
         </main>
