--- a/001.HTML/014.moksha/index.html
+++ b/001.HTML/014.moksha/index.html
@@ -236,6 +236,11 @@
                 </div>
             </section>
         </main>
+        <footer id="footer">
+            <div class="footer-wrapper">
+                
+            </div>
+        </footer>
     </div>
     <script src="./js/main.js"></script>
 </body>
