--- a/001.HTML/014.moksha/index.html
+++ b/001.HTML/014.moksha/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>moksha yoga and meditation. 하타요가, 테라피, 명상</title>
+    <title>MokshaYoga and meditation. 하타요가, 테라피, 명상, 다도</title>
+    <link rel="shortcut icon" href="images/profileImage.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/common.css">
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -13,7 +14,7 @@
     <div id="wrapper">
         <header id="header">
             <div class="nav-box">
-                <h1 class="logo pc"><a href="#"><img src="images/moksha_logo.png" alt="목샤요가원"><i>moksha</i></a></h1>
+                <h1 class="logo pc"><a href="#"><img src="images/moksha_logo.png" alt="로고"><i>moksha</i></a></h1>
                 <div class="menu-box">
                     <a href="https://blog.naver.com/moksha_yoga/222953822605" target="_blank" class="counsel">상담하기</a>
                     <label for="switch-global" style="filter:inherit" class="btn-menu"></label>
@@ -25,7 +26,7 @@
             <section class="top-wrapper">
                 <div class="top-layer-wrapper fade-letters-pc">
                     <p class="address fade-letters">
-                        Moksha Yoga, Gwangju-si, Gyeonggi-do, Republic of Korea
+                        MokshaYoga, Gwangju-si, Gyeonggi-do, Republic of Korea
                     </p>
                 </div>
                 <div class="first-section fade gray-scale">
@@ -238,7 +239,68 @@
         </main>
         <footer id="footer">
             <div class="footer-wrapper">
-                
+                <div class="left-box kr">
+                    <div class="upper-box">
+                        <h2 class="name">목샤요가원</h2>
+                        <p class="address">
+                            <a href="" class="footer-menu" target="blank">
+                                12772
+                                <br>
+                                경기도 광주시 오포읍 수레안길 41번길 34
+                            </a>
+                        </p>
+                        <p class="tel">
+                            <a href="" class="footer-menu">전화: 010-4258-1322</a>
+                        </p>
+                    </div>
+                    <div class="middle-wrapper1">
+                        <ul class="menu second">
+                            <li><a href="" class="footer-menu" target="blank">문의</a></li>
+                            <li><a href="" class="footer-menu" target="blank">문의</a></li>
+                            <li><a href="" class="footer-menu" target="blank">문의</a></li>
+                            <li><a href="" class="footer-menu" target="blank">문의</a></li>
+                        </ul>
+                    </div>
+                    <div class="middle-wrapper2">
+                        <ul class="menu second">
+                            <li><a href="" class="footer-menu" target="blank">약관</a></li>
+                            <li><a href="" class="footer-menu" target="blank">취소</a></li>
+                            <li><a href="" class="footer-menu" target="blank">약관</a></li>
+                            <li><a href="" class="footer-menu" target="blank">약관</a></li>
+                        </ul>
+                    </div>
+                    <div class="bottom-wrapper1">
+                        <ul class="sns">
+                            <li><a href="" class="footer-menu">Instagram</a></li>
+                            <li><a href="" class="footer-menu">Facebook</a></li>
+                            <li><a href="" class="footer-menu">Youtube</a></li>
+                        </ul>
+                    </div>
+                    <div class="bottom-wrapper2 bottom">
+                        <span class="recruit">
+                            <a href="" class="footer-menu">사용</a>
+                        </span>
+                    </div>
+                </div>
+                <div class="right-box kr">
+                    <h2 class="logo">
+                        <a href="" id="footer-logo">
+                            <img src="images/moksha_logo.png" alt="로고">
+                        </a>
+                    </h2>
+                    <div class="bottom-wrapper">
+                        <div class="menu-lang footer-menu">
+                            <ul class="lang">
+                                <li><a href="" class="kr">KR</a></li>
+                                <span class="slash">/</span>
+                                <li><a href="" class="en">EN</a></li>
+                            </ul>
+                        </div>
+                        <p class="copyright">
+                            <small>@MokshaYoga</small>
+                        </p>
+                    </div>
+                </div>
             </div>
         </footer>
     </div>
