--- a/001.HTML/014.moksha/index.html
+++ b/001.HTML/014.moksha/index.html
@@ -18,6 +18,60 @@
                 <div class="menu-box">
                     <a href="https://blog.naver.com/moksha_yoga/222953822605" target="_blank" class="counsel">상담하기</a>
                     <label for="switch-global" style="filter:inherit" class="btn-menu"></label>
+                    <div class="global">
+                        <div class="outer-wrapper">
+                            <div class="outer">
+                                <div class="inner">
+                                    <div class="menu-left">
+                                        <ul class="menu">
+                                            <li>
+                                                <a href="">
+                                                    <span class="kr">컨셉</span>
+                                                    <br>
+                                                    <span class="en">CONCEPT</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="">
+                                                    <span class="kr">컨셉</span>
+                                                    <br>
+                                                    <span class="en">CONCEPT</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="">
+                                                    <span class="kr">컨셉</span>
+                                                    <br>
+                                                    <span class="en">CONCEPT</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="">
+                                                    <span class="kr">컨셉</span>
+                                                    <br>
+                                                    <span class="en">CONCEPT</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="">
+                                                    <span class="kr">컨셉</span>
+                                                    <br>
+                                                    <span class="en">CONCEPT</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="">
+                                                    <span class="kr">컨셉</span>
+                                                    <br>
+                                                    <span class="en">CONCEPT</span>
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </header>
