--- a/001.HTML/014.moksha/index.html
+++ b/001.HTML/014.moksha/index.html
@@ -68,6 +68,55 @@
                                             </li>
                                         </ul>
                                     </div>
+                                    <div class="menu-right">
+                                        <ul class="menu">
+                                            <li>
+                                                <a href="">
+                                                    <span class="kr">뉴스</span>
+                                                    <br>
+                                                    <span class="en">NEWS</span>
+                                                </a>
+                                            </li>
+                                            <li class="pc">
+                                                <a href="">
+                                                    <span class="kr">뉴스</span>
+                                                    <br>
+                                                    <span class="en">NEWS</span>
+                                                </a>
+                                            </li>
+                                            <li class="pc">
+                                                <a href="">
+                                                    <span class="kr">온라인샵</span>
+                                                    <br>
+                                                    <span class="en">ONLINE SHOP</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="">
+                                                    <span class="kr">문의</span>
+                                                    <br>
+                                                    <span class="en">CONTACT</span>
+                                                </a>
+                                            </li>
+                                        </ul>
+                                        <ul class="sns">
+                                            <li><a href="">Instagram</a></li>
+                                            <li><a href="">Facebook</a></li>
+                                            <li><a href="">Youtube</a></li>
+                                            <li class="pc"><a href="">사용</a></li>
+                                        </ul>
+                                    </div>
+                                    <div class="menu-lang">
+                                        <ul class="lang">
+                                            <li>
+                                                <a href="" class="kr">KR</a>
+                                            </li>
+                                            <span id="slash">/</span>
+                                            <li>
+                                                <a href="" class="en">EN</a>
+                                            </li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                         </div>
