--- a/001.HTML/014.moksha/index.html
+++ b/001.HTML/014.moksha/index.html
@@ -16,8 +16,9 @@
             <div class="nav-box">
                 <h1 class="logo pc"><a href="#"><img src="images/moksha_logo.png" alt="로고"><i>moksha</i></a></h1>
                 <div class="menu-box">
+                    <input type="checkbox" name="switch-global" id="switch-global" class="hidden-input" value="menu">
                     <a href="https://blog.naver.com/moksha_yoga/222953822605" target="_blank" class="counsel">상담하기</a>
-                    <label for="switch-global" style="filter:inherit" class="btn-menu"></label>
+                    <label for="switch-global" name="switch-global" type="checkbox" value="menu" style="filter:inherit" class="btn-menu"></label>
                     <div class="global">
                         <div class="outer-wrapper">
                             <div class="outer">
@@ -109,7 +110,7 @@
                                     <div class="menu-lang">
                                         <ul class="lang">
                                             <li>
-                                                <a href="" class="kr">KR</a>
+                                                <a href="" class="kr">KR&nbsp;</a>
                                             </li>
                                             <span id="slash">/</span>
                                             <li>
