--- a/001.HTML/014.moksha/index.html
+++ b/001.HTML/014.moksha/index.html
@@ -401,7 +401,7 @@
                             </ul>
                         </div>
                         <p class="copyright">
-                            <small>@MokshaYoga</small>
+                            <small>©MokshaYoga</small>
                         </p>
                     </div>
                 </div>
