--- a/001.HTML/014.moksha/index.html
+++ b/001.HTML/014.moksha/index.html
@@ -138,25 +138,24 @@
                         <div class="swiper first-view-box swiper17 swiper-fade swiper-initialized swiper-horizontal swiper-android swiper-watch-progress swiper-backface-hidden">
                             <div class="swiper-wrapper">
                               <div class="swiper-slide">
-                                <img src="images/first-view-img1@2x.jpeg" />
+                                <img class="l-img" src="images/first-view-img1@2x.jpeg" />
                               </div>
                               <div class="swiper-slide">
-                                <img src="images/first-view-img2.jpeg.webp" />
+                                <img class="l-img" src="images/first-view-img2.jpeg.webp" />
                               </div>
                               <div class="swiper-slide">
-                                  <img src="images/first-view-img3@2x.jpeg" />
+                                  <img class="l-img" src="images/first-view-img3@2x.jpeg" />
                                 </div>
                                 <div class="swiper-slide">
-                                  <img src="images/first-view-img4.jpeg.webp" />
+                                  <img class="l-img" src="images/first-view-img4.jpeg.webp" />
                                 </div>
                                 <div class="swiper-slide">
-                                  <img src="images/first-view-img5@2x.jpeg" />
+                                  <img class="l-img" src="images/first-view-img5@2x.jpeg" />
                               </div>
                             </div>
-                            <!-- <div class="swiper-button-next"></div>
-                            <div class="swiper-button-prev"></div> -->
                           </div>
                     </div>
+                    <p class="address">MokshaYoga, Gwangju-si, Gyeonggi-do, Republic of Korea</p>
                 </div>
                 <div class="second-section">
                     <div class="description-box fade-letters-pc">
