--- a/001.HTML/014.moksha/index.html
+++ b/001.HTML/014.moksha/index.html
@@ -342,6 +342,11 @@
         </main>
         <footer id="footer">
             <div class="footer-wrapper">
+                <div class="logo-box">
+                    <h2 class="logo-sp">
+                        <a href="" id="footer-logo-sp"><img src="images/logo.png" alt="로고"></a>
+                    </h2>
+                </div>
                 <div class="left-box kr">
                     <div class="upper-box">
                         <h2 class="name">목샤요가원</h2>
@@ -384,6 +389,9 @@
                             <a href="" class="footer-menu">사용</a>
                         </span>
                     </div>
+                    <p class="copyright-sp" id="copyright">
+                        <small>@MokshaYoga</small>
+                    </p>
                 </div>
                 <div class="right-box kr">
                     <h2 class="logo">
