--- a/001.HTML/014.moksha/index.html
+++ b/001.HTML/014.moksha/index.html
@@ -15,6 +15,7 @@
         <header id="header">
             <div class="nav-box">
                 <h1 class="logo pc"><a href="#"><img src="images/moksha_logo.png" alt="로고"><i>moksha</i></a></h1>
+                <h1 class="logo sp logo-fade"><a href="#"><img src="images/moksha_logo.png" alt="로고"><i>moksha</i></a></h1>
                 <div class="menu-box">
                     <input type="checkbox" name="switch-global" id="switch-global" class="hidden-input" value="menu">
                     <a href="https://blog.naver.com/moksha_yoga/222953822605" target="_blank" class="counsel">상담하기</a>
@@ -119,6 +120,28 @@
                                         </ul>
                                     </div>
                                 </div>
+                                <div class="menu-bottom">
+                                    <ul class="menu">
+                                        <li>
+                                            <a href="" target="blank">
+                                                <span class="kr">온라인스토어</span>
+                                                <br>
+                                                <span class="en">ONLINE SHOP</span>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                    <div class="menu-lang">
+                                        <ul class="lang">
+                                            <li>
+                                                <a href="" class="kr">KR</a>
+                                            </li>
+                                            <span id="slash">/</span>
+                                            <li>
+                                                <a href="" class="en">EN</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -194,12 +217,12 @@
                                     <h2 class="hanja">冥想</h2>
                                     <div class="subtitle-box">
                                         <div class="kr-box">
-                                            <h3 class="sub">세련된 소재와</h3>
-                                            <h3 class="sub">창의에 의한 음식 체험</h3>
+                                            <h3 class="sub">세련된 공간과</h3>
+                                            <h3 class="sub">창의에 의한 명상체험</h3>
                                         </div>
                                         <span class="border"></span>
                                         <div class="en-box">
-                                            <h3 class="en">Food experience that  </h3>
+                                            <h3 class="en">meditation experience that  </h3>
                                             <h3 class="en second">carefully selected ingredients with creativity.</h3>
                                         </div>
                                     </div>
