--- a/001.HTML/008.VOGUE_PJ/002.site/sub.html
+++ b/001.HTML/008.VOGUE_PJ/002.site/sub.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fontisto@v3.0.4/css/fontisto/fontisto.min.css">
     <link rel="stylesheet" href="./css/sub.css">
     <link rel="stylesheet" href="./css/media.css">
-    <!-- 미디어쿼리를 본css하단에 link방식으로 넣어준다 -->
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
     <script src="js/linksys.js"></script>
@@ -18,13 +17,9 @@
 </head>
 
 <body>
-
-    <!-- 1. 상단영역 -->
     <div id="top">
         <header class="top ibx">
-            <!-- 1-1.상단메뉴 -->
             <div class="tmenu">
-                <!-- 1-1-1.sns박스 -->
                 <div class="sns">
                     <a href="#" class="fi fi-instagram">
                         <span class="ir">
@@ -52,12 +47,10 @@
                         </span>
                     </a>
                 </div>
-                <!-- 1-1-2. 사이드메뉴 -->
                 <div class="sideMenu">
                     <ul class="smbx">
                         <li>
                             <a href="#">SIDE MENU</a>
-                            <!-- 서브메뉴 -->
                             <ol class="smsub">
                                 <li>
                                     <a href="#">회사소개</a>
@@ -76,13 +69,11 @@
                     </ul>
                 </div>
             </div>
-            <!-- 1-2.로고박스 -->
             <h1 class="logo">
                 <a href="./index.html">
                     <img src="./images/mlogo.png" alt="메인로고">
                 </a>
             </h1>
-            <!-- 1-3.GNB박스 -->
             <nav class="gnb">
                 <ul>
                     <li>
@@ -113,32 +104,23 @@
                     </li>
                 </ul>
             </nav>
-            <!-- 1-4.모바일버튼 -->
-            <!-- 햄버거버튼 -->
             <a href="#" class="ham">≡</a>
-            <!-- 검색버튼 -->
             <a href="" class="mag fi fi-search">
                 <span class="ir">모바일검색버튼</span>
             </a>
-            <!-- 1-5. 모바일용 검색박스 -->
             <div class="mos">
                 <div class="mwrap">
-                    <!-- 입력창박스 -->
                     <div id="search">
                         <input type="text" placeholder="Search...">
                     </div>
-                    <!-- 검색버튼 -->
                     <button class="scbtn fi fi-search">
                         <span class="ir">돋보기검색아이콘</span>
                     </button>
                 </div>
             </div>
 
-
-            <!-- 1-5. 모바일용 메뉴 -->
             <div class="mowrap">
                 <div id="mobx">
-                    <!-- 1-5-1.모바일 GNB메뉴 -->
                     <nav class="mognb">
                         <ul>
                             <li>
@@ -164,7 +146,6 @@
                             </li>
                         </ul>
                     </nav>
-                    <!-- 1-5-2.모바일 sns메뉴 -->
                     <div class="mosns">
                         <a href="#" class="fi fi-instagram">
                             <span class="ir">
@@ -192,22 +173,17 @@
                             </span>
                         </a>
                     </div>
-                    <!-- 1-5-3.매거진 박스 -->
                     <figure class="magbox">
-                        <!-- 잡지커버 이미지 -->
                         <a href="#" class="mcover">
                             <img src="./images/cover.jpg" alt="보그표지">
                         </a>
-                        <!-- 잡지설명 -->
                         <figcaption>
                             정기구독을 신청하면 최대 30% 할인혜택을 드립니다!
                         </figcaption>
-                        <!-- 정기구독버튼 -->
                         <button class="magbtn">
                             정기구독신청
                         </button>
                     </figure>
-                    <!-- 1-5-4. 하단링크박스 -->
                     <ul class="moblink">
                         <li>
                             <a href="#">
@@ -226,17 +202,13 @@
                         </li>
                     </ul>
                 </div>
-            </div><!-- 모바일용 링크 끝 -->
+            </div>
         </header>
     </div>
-    <!-- 2. 메인영역 -->
     <div id="cont" class="bgc">
         <main class="cont ibx">
-            <!-- 1. 서브페이지 탑영역 -->
             <header class="subtop">
-                <!-- 1-1. 서브타이틀 -->
                 <h2 class="stit"></h2>
-                <!-- 1-2. 서브메뉴(LNB-Local Navigation Bar) -->
                 <nav class="lnb">
                     <ul>
                         <li>
@@ -259,8 +231,6 @@
 
             </header>
 
-            <!-- 2. 서브컨텐츠박스 -->
-            <!-- 컨텐츠1 - 파트2:3개 -->
             <section class="pt2 rbx">
                 <div class="rbxIn fbx">
                     <div class="cbx bgi bg1-1">
@@ -274,7 +244,6 @@
                     </div>
                 </div>
             </section>
-            <!-- 컨텐츠2- 파트2:3개 -->
             <section class="pt2 rbx">
                 <div class="rbxIn fbx">
                     <div class="cbx bgi bg2-1">
@@ -290,19 +259,15 @@
             </section>
         </main>
     </div>
-    <!-- 3. 하단영역 -->
     <div id="info" class="bgc">
         <footer class="info ibx">
-            <!-- 3-1.하단로고 -->
             <div class="blogo">
                 <img src="./images/footer_logo.png" alt="하단로고">
             </div>
-            <!-- 3-2.회사주소 -->
             <address class="addr">
                 WWW.VOGUE.COM Ⓒ CONDÉNAST ASIA PACIFIC. INC. ALL RIGHTS RESERVED. VOGUE.COM KOREA IS OPERATED BY DOOSAN
                 MAGAZINE.
             </address>
-            <!-- 3-3.하단링크 -->
             <ul class="blink">
                 <li>
                     <a href="#">정기구독</a>
@@ -319,7 +284,6 @@
             </ul>
         </footer>
     </div>
-    <!-- 위로가기 버튼 -->
     <a href="#" class="tbtn fi fi-angle-up">
         <span class="ir">위로가기버튼</span>
     </a>
