--- a/001.HTML/012.Blue_PJ/artist.html
+++ b/001.HTML/012.Blue_PJ/artist.html
@@ -67,6 +67,10 @@
                     Entre mai 1954 et le 6 juin 1962, date de sa mort, Yves Klein aura brûlé sa vie pour réaliser une œuvre flamboyante qui a marqué son époque et qui rayonne encore aujourd’hui.
                 </p>
             </section>
+            <span class="down"><a href="#">
+                <div class="imgWrap"><img src="images/scroll.png" alt="스크롤"></div>
+            </a>
+            </span>
         </main>
 
         <footer class="footer">
