--- a/001.HTML/012.Blue_PJ/brtist.html
+++ b/001.HTML/012.Blue_PJ/brtist.html
@@ -154,6 +154,10 @@
                     qui en renouant avec les concepts antiques de nature et de cosmos réalise le "vieux rêves des hommes et de l'imagination de jouer avec les éléments de la nature, de diriger et de contrôler leurs phénomènes et manifestations".
                 </p>
             </section>
+            <span class="down"><a href="#">
+                <div class="imgWrap"><img src="images/scroll.png" alt="스크롤"></div>
+            </a>
+            </span>
         </main>
 
         <footer class="footer">
