--- a/001.HTML/012.Blue_PJ/crtist.html
+++ b/001.HTML/012.Blue_PJ/crtist.html
@@ -117,6 +117,10 @@
                     Yves Klein, extrait de "Le vrai devient réalité", 1960, Le dépassement de la problématique de l'art et autres écrits, Beaux-Arts de Paris, 2003
                 </p>
             </div>
+            <span class="down"><a href="#">
+                <div class="imgWrap"><img src="images/scroll.png" alt="스크롤"></div>
+            </a>
+            </span>
         </main>
 
         <footer class="footer">
