--- a/001.HTML/012.Blue_PJ/exposition.html
+++ b/001.HTML/012.Blue_PJ/exposition.html
@@ -39,6 +39,10 @@
                     <img src="images/mbt3.jpeg" alt="Yves Klein">
                 </div>
             </nav>
+            <span class="down"><a href="#">
+                <div class="imgWrap"><img src="images/scroll.png" alt="스크롤"></div>
+            </a>
+            </span>
         </header>
 
         <section class="cont cont2">
